<resources>
    <string name="app_name">MeeTEaT</string>
    <string name="phoneNumberPrompt">電話番号を入力して下さい</string>
    <string name="continueButtonLabel">続行</string>
    <string name="appleLabel">Apple</string>
    <string name="googleLabel">google</string>
    <string name="rakutenLabel">楽天</string>
    <string name="mailAddressLabel">メールアドレス</string>
    <string name="findMyAccountPrompt">アカウントを探す</string>
    <string name="buyDinnerAreaPrompt">いつも食事を購入するエリアを選んでください</string>
    <string name="homeToNearestStation">自宅〜最寄駅</string>
    <string name="officeToStation">勤め先〜駅</string>
    <string name="nextButtonLabel">次へ</string>
    <string name="adjust_station_exit_point_prompt">駅のいつもの出口地点を調節してください</string>
    <string name="user_draw_route_prompt">いつもの帰り道のルートを指でなぞって描いてください</string>
    <string name="home_label">自宅</string>
    <string name="nearest_station_label">最寄駅</string>
    <string name="office_label">勤め先</string>
    <string name="station_label">駅</string>
    <string name="route_registration_purpose_message">MeeTEaTはあなたが登録したルート周辺の飲食店を表示させます。</string>
    <string name="registration_last_check_message">準備が完了しました。確認して登録してください！</string>
    <string name="registration_complete_btn_label">登録完了</string>
    <string name="registration_complete_message">登録が完了しました！さぁ、素敵なテイクアウトライフを始めましょう！</string>
    <string name="route_restaurant_card_label">ルート上の店舗</string>
    <string name="quick_pickup_hint">（すぐ受け取りたいならここ！)　</string>
    <string name="history_card_label">過去の注文</string>
    <string name="recommend_card_label">高評価</string>
    <string name="chinese_food_card_label">中華料理</string>
    <string name="japanese_food_card_label">和食・定食</string>
    <string name="italian_food_card_label">イタリアン</string>
    <string name="cafe_food_card_label">カフェ・軽食</string>
    <string name="healthy_food_card_label">ヘルシー</string>
    <string name="yoshinoya_name">吉野家 三条大橋店</string>
    <string name="cocoichi_name">CoCo壱番屋 四条河原町店</string>
    <string name="pickUp_now_label">今注文ですぐ受け取り可能</string>
    <string name="pickUp_in_5_min_label">5分以内に受け取り可能</string>
    <string name="shop_discount_message_label">夜間セール20％オフ</string>
    <string name="star_rating_label">★4.5(1,000+)</string>
    <string name="opening_hours_text">~22:00 </string>
    <string name="average_pickUp_time_text">平均受け渡し時間</string>
    <string name="featured_card_label">注目商品</string>
    <string name="discounted_card_label">セール</string>
    <string name="mainDish_label">メイン</string>
    <string name="sideMenu_label">サイド</string>
    <string name="riceDish_card_label">ご飯もの</string>
    <string name="check_cart_label">カートを見る</string>
    <string name="quattro_happy_name">クワトロ・ハッピー Quattro Happy </string>
    <string name="product_price_Text">¥2,380</string>
    <string name="product_description_text">(((((商品説明))))</string>
    <string name="product_size_label">サイズ</string>
    <string name="put_in_to_cart_label">カートに入れる</string>
    <string name="add_more_label">商品を追加</string>
    <string name="add_memo_label">メモの追加</string>
    <string name="order_subtotal_label">小計</string>
    <string name="order_subtotal_text">￥1130</string>
    <string name="check_out_button_label">お会計に進む</string>
    <string name="check_order_details_label">注文内容の確認</string>
    <string name="order_details_label">注文内容</string>
    <string name="service_charge_label">サービス料</string>
    <string name="service_Charge_text">￥  110</string>
    <string name="total_price_label">合計</string>
    <string name="total_price_text">￥1240</string>
    <string name="credit_card_number_Text">Visa .......4211</string>
    <string name="order_label">注文する</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
