<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/txt_phone_number_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/phoneNumberPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/continueButtonLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countyphone" />

    <View
        android:id="@+id/divider_between_social_and_linkFindAccount"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_email" />

    <View
        android:id="@+id/divider_between_continueBtn_social"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

    <Button
        android:id="@+id/btn_login_email"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/mailAddressLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_rakuten" />

    <Button
        android:id="@+id/btn_login_apple"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/appleLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_between_continueBtn_social" />

    <Button
        android:id="@+id/btn_login_rakuten"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/rakutenLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/googleLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_apple" />

    <TextView
        android:id="@+id/link_find_account"
        android:layout_width="264dp"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:text="@string/findMyAccountPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_between_social_and_linkFindAccount" />

    <ImageView
        android:id="@+id/countyphone"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/txt_phone_number_prompt"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_prompt"
        app:srcCompat="@drawable/japanflag" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintStart_toEndOf="@+id/countyphone"
        app:layout_constraintTop_toBottomOf="@+id/txt_phone_number_prompt" />

    <TextView
        android:id="@+id/txt_phone_number_Label"
        android:layout_width="243dp"
        android:layout_height="32dp"
        android:gravity="bottom"
        android:text="電話番号"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone" />

</androidx.constraintlayout.widget.ConstraintLayout>